--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-helpers-nextjs": "^0.4.0",
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/supabase-js": "^2.0.0",
+    "graphql-yoga": "^3.0.0-next.7",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -29,6 +30,7 @@
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/supabase-js": "^2.0.0",
     "encoding": "^0.1.13",
+    "graphql-yoga": "^3.0.0-next.7",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
