--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Kitchen sink",
   "main": "dist/index.js",
+  "exports": {
+    "./api": "./dist/api/index.js",
+    "./shared": "./dist/shared/index.js",
+    "./web": "./dist/web/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx babel src --out-dir dist",
@@ -13,10 +18,10 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.4.0",
-    "@supabase/auth-helpers-react": "^0.3.0",
-    "@supabase/supabase-js": "^2.0.0",
-    "graphql-yoga": "^3.0.0-next.7",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.1.0",
+    "graphql-yoga": "^3.0.0",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -30,13 +35,14 @@
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/supabase-js": "^2.0.0",
     "encoding": "^0.1.13",
-    "graphql-yoga": "^3.0.0-next.7",
-    "next": "^12.3.1",
+    "graphql-yoga": "^3.0.0",
+    "next": "^13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "minimist": "^1.2.7"
+    "minimist": "^1.2.7",
+    "node-fetch-polyfill": "^2.0.6"
   }
 }
