--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
     "minimist": "^1.2.7",
     "node-fetch-polyfill": "^2.0.6"
   }
