--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "./web": "./dist/web/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest --coverage",
     "build": "npx babel src --out-dir dist",
     "clean": "rm -rf ./node_modules; rm -rf ./dist; rm -f package-lock.json",
     "reset": "npm run clean; npm install; npm link",
-    "watch": "npx babel src --watch --out-dir dist"
+    "dev": "npx babel src --watch --out-dir dist"
   },
   "author": "",
   "license": "MIT",
@@ -34,8 +34,10 @@
     "@supabase/auth-helpers-nextjs": "^0.4.0",
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/supabase-js": "^2.0.0",
+    "babel-jest": "^29.3.1",
     "encoding": "^0.1.13",
     "graphql-yoga": "^3.0.0",
+    "jest": "^29.3.1",
     "next": "^13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
