--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "build": "npx babel src --out-dir dist",
     "clean": "rm -rf ./node_modules; rm -rf ./dist; rm -f package-lock.json",
     "reset": "npm run clean; npm install; npm link",
-    "dev": "npx babel src --watch --out-dir dist"
+    "dev": "NODE_ENV=dev npx babel src --watch --out-dir dist"
   },
-  "author": "",
+  "author": "stephen.handley@gmail.com",
   "license": "MIT",
   "peerDependencies": {
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.1.0",
+    "graphql": "^16.6.0",
     "graphql-yoga": "^3.0.0",
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "solid-start": "^0.2.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -36,11 +38,13 @@
     "@supabase/supabase-js": "^2.0.0",
     "babel-jest": "^29.3.1",
     "encoding": "^0.1.13",
+    "graphql": "^16.6.0",
     "graphql-yoga": "^3.0.0",
     "jest": "^29.3.1",
     "next": "^13.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "solid-start": "^0.2.9"
   },
   "dependencies": {
     "classnames": "^2.3.2",
